--- a/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
@@ -11,7 +11,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.Code" class="control-label"></label>
-                <input asp-for="TNVEDCode.Code" class="form-control" />
+                <input asp-for="TNVEDCode.Code" class="form-control" autofocus />
                 <span asp-validation-for="TNVEDCode.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
