--- a/ManageDb/Pages/Index.cshtml
+++ b/ManageDb/Pages/Index.cshtml
@@ -8,7 +8,16 @@
     <div class="col-2 col">
         <text>Filters</text>
     </div>
-    <div class="col text-end">
+    <div class="col-7 text-end">Показать</div>
+    <div class="col-1 text-start">
+        <select>
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+        </select>
+    </div>
+    <div class="col-2 text-end">
         <h6>Всего записей: @Model.TNVEDCodes.Count</h6>
     </div>
 </div>
