--- a/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
@@ -21,8 +21,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.TechRegs" class="control-label"></label>
-                <select class="form-control" name="TNVEDCode_TechRegs" asp-for="TNVEDCode.TechRegs" asp-items="Model.TechRegNameMSL" multiple>
-                </select>
+                @if (Model.TNVEDCode != null)
+                {
+                    <select class="form-control" size="@(Model.TechRegNameMSL.Count() + Model.TNVEDCode.TechRegs.Count)" name="TNVEDCode_TechRegs" asp-for="TNVEDCode.TechRegs" asp-items="Model.TechRegNameMSL" multiple>
+                    @foreach (var techReg in Model.TNVEDCode.TechRegs)
+                    {
+                        <option value="@techReg.Id" selected>@techReg.Name</option>
+                    }
+                    </select>
+                }
+                else
+                {
+                    <select class="form-control" size="@Model.TechRegNameMSL.Count()" name="TNVEDCode_TechRegs" asp-for="TNVEDCode.TechRegs" asp-items="Model.TechRegNameMSL" multiple>
+                    </select>
+                }
                 <span asp-validation-for="TNVEDCode.TechRegs" class="text-danger"></span>
             </div>
             <br />
