--- a/ManageDb/Pages/Views/TNVEDCode/Edit.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Edit.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.TechRegs" class="control-label"></label>
-                <select name="TNVEDCode_TechRegs" asp-for="TNVEDCode.TechRegs" asp-items="Model.TechRegNameMSL" class="form-control" multiple>
+                <select name="TNVEDCode_TechRegs" class="form-control" size="@(Model.TechRegNameMSL.Count() + Model.TNVEDCode.TechRegs.Count)" asp-for="TNVEDCode.TechRegs" asp-items="Model.TechRegNameMSL" multiple>
                 @foreach (var techReg in Model.TNVEDCode.TechRegs)
                 {
                     <option value="@techReg.Id" selected>@techReg.Name</option>
