Added functionality and adjusted services. Db updated with new data

--- a/ManageDb/Pages/Index.cshtml
+++ b/ManageDb/Pages/Index.cshtml
@@ -18,7 +18,7 @@
         </select>
     </div>
     <div class="col-2 text-end">
-        <h6>Всего записей: @Model.TNVEDCodes.Count</h6>
+        <h6>Всего записей: @ViewBag.RecordsQuantity</h6>
     </div>
 </div>
 <div class="row">
