--- a/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
@@ -11,12 +11,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.Code" class="control-label"></label>
-                <input asp-for="TNVEDCode.Code" class="form-control" autofocus />
+                <input asp-for="TNVEDCode.Code" class="form-control" autofocus onchange="trim(this)" />
                 <span asp-validation-for="TNVEDCode.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.Name" class="control-label"></label>
-                <input asp-for="TNVEDCode.Name" class="form-control" />
+                <input asp-for="TNVEDCode.Name" class="form-control" onchange="trim(this)" />
                 <span asp-validation-for="TNVEDCode.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -51,4 +51,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
 }
