--- a/ManageDb/Pages/Views/TNVEDCode/Edit.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Edit.cshtml
@@ -12,12 +12,12 @@
             <input type="hidden" asp-for="TNVEDCode.Id" />
             <div class="form-group">
                 <label asp-for="TNVEDCode.Code" class="control-label"></label>
-                <input asp-for="TNVEDCode.Code" class="form-control" />
+                <input asp-for="TNVEDCode.Code" class="form-control" onchange="trim(this)" />
                 <span asp-validation-for="TNVEDCode.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.Name" class="control-label"></label>
-                <input asp-for="TNVEDCode.Name" class="form-control" />
+                <input asp-for="TNVEDCode.Name" class="form-control" onchange="trim(this)" />
                 <span asp-validation-for="TNVEDCode.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
