--- a/ManageDb/Pages/Views/TechReg/Create.cshtml
+++ b/ManageDb/Pages/Views/TechReg/Create.cshtml
@@ -11,12 +11,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TechReg.Name" class="control-label"></label>
-                <input asp-for="TechReg.Name" class="form-control" required />
+                <input asp-for="TechReg.Name" class="form-control" required onchange="trim(this)" />
                 <span asp-validation-for="TechReg.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TechReg.Description" class="control-label"></label>
-                <input asp-for="TechReg.Description" class="form-control" required />
+                <input asp-for="TechReg.Description" class="form-control" required onchange="trim(this)" />
                 <span asp-validation-for="TechReg.Description" class="text-danger"></span>
             </div>
             <br />
@@ -33,4 +33,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
 }
