--- a/ManageDb/Pages/Views/TechReg/Edit.cshtml
+++ b/ManageDb/Pages/Views/TechReg/Edit.cshtml
@@ -12,12 +12,12 @@
             <input type="hidden" asp-for="TechReg.Id" />
             <div class="form-group">
                 <label asp-for="TechReg.Name" class="control-label"></label>
-                <input asp-for="TechReg.Name" class="form-control" required />
+                <input asp-for="TechReg.Name" class="form-control" required onclick="trim(this)" />
                 <span asp-validation-for="TechReg.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TechReg.Description" class="control-label"></label>
-                <input asp-for="TechReg.Description" class="form-control" required />
+                <input asp-for="TechReg.Description" class="form-control" required onclick="trim(this)" />
                 <span asp-validation-for="TechReg.Description" class="text-danger"></span>
             </div>
             <br />
@@ -34,4 +34,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
 }
