--- a/ManageDb/Pages/Views/TNVEDCode/Index.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Index.cshtml
@@ -1,39 +1,46 @@
-﻿@page "/TNVEDCode"
+﻿@page "/TNVEDCode/{handler?}"
 @model ManageDb.Pages.Views.TNVEDCode.IndexModel
 
 <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<div class="row">
+    <div class="col-2">
+        <a asp-page="Create">Создать новый</a>
+    </div>
+    <div class="col text-end">
+        <b>Показать</b>
+        <select onchange="gotoUrl(this)">
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+        </select>
+    </div>
+</div>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TNVEDCode.First().Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TNVEDCode.First().Name)
-            </th>
-            <td class="text-end">
-                <b>Показать</b>
-                <select>
-                    <option value="10">10</option>
-                    <option value="25">25</option>
-                    <option value="50">50</option>
-                    <option value="100">100</option>
-                </select>
-            </td>
+            <th class="text-center">Код</th>
+            <th class="col-2">Наименование</th>
+            <th>Тех. регламенты / Решения</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.TNVEDCode) {
+    @foreach (var item in Model.TNVEDCode)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Code)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+            @foreach (var techReg in item.TechRegs)
+            {
+                @Html.DisplayFor(modelTechReg => techReg.Name)<br />
+            }
             </td>
             <td class="col-md-2 text-end">
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
@@ -42,6 +49,18 @@
                 <a asp-page="./Create" asp-route-id="@item.Id" asp-page-handler="CopyFrom">Copy</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            document.getElementsByTagName('select')[0].value = @ViewData["PageSize"];
+        });
+
+        function gotoUrl(element) {
+            window.location.href = `/TNVEDCode/MoreOnPage?pageSize=${element.value}`;
+        };
+    </script>
+}
