--- a/ManageDb/Pages/Views/TechReg/Index.cshtml
+++ b/ManageDb/Pages/Views/TechReg/Index.cshtml
@@ -4,14 +4,12 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Создать новый</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th class="col">
-                @Html.DisplayNameFor(model => model.TechRegs)
-            </th>
+            <th class="col">Наименование</th>
             <th class="col-3">Описание</th>
             <th class="col-2"></th>
         </tr>
