--- a/ManageDb/Pages/Index.cshtml
+++ b/ManageDb/Pages/Index.cshtml
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
     <div class="col-2 col">
-        <input type="search" placeholder="Enter code" />
+        <input type="search" placeholder="Enter code" onchange="gotoSearchUrl(this)" />
     </div>
     <div class="col">
         <input type="search" placeholder="Enter name" class="col-12" />
@@ -60,6 +60,13 @@
 
         function gotoUrl(element) {
             window.location.href = `/MoreOnPage?pageSize=${element.value}`;
+        };
+
+        function gotoSearchUrl(element) {
+            let searchCode = element.value.trim();
+            if (searchCode != '' && searchCode.length <= 10) {
+                window.location.href = `/SearchResults?searchCode=${searchCode}`;
+            }
         };
     </script>
 }
