--- a/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
+++ b/ManageDb/Pages/Views/TNVEDCode/Create.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TNVEDCode.Name" class="control-label"></label>
-                <input asp-for="TNVEDCode.Name" class="form-control" onchange="trim(this)" />
+                <input asp-for="TNVEDCode.Name" class="form-control" onchange="noDummiesEntrance(this)" />
                 <span asp-validation-for="TNVEDCode.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
